scrollbar/welcome fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,12 +167,14 @@
 }
 
 #content-body::-webkit-scrollbar-track,
+.scrollbox::-webkit-scrollbar-track,
 .cool-scroll::-webkit-scrollbar-track
 {
     background-color: var(--dark-less);
 }
 
 #content-body::-webkit-scrollbar,
+.scrollbox::-webkit-scrollbar,
 .cool-scroll::-webkit-scrollbar
 {
     width: 7px;
@@ -180,6 +182,7 @@
 }
 
 #content-body::-webkit-scrollbar-thumb,
+.scrollbox::-webkit-scrollbar-thumb,
 .cool-scroll::-webkit-scrollbar-thumb
 {
     background-color: var(--dark-lesserest);
@@ -841,6 +844,7 @@ body, .master-container {
 }
 
 .scrollbox {
+    width: 100%;
     height: 100%;
     overflow-y: scroll;
     overflow-x: visible;
